--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -10,7 +11,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+        
+<h1>Bootstrap buttons</h1>
+<button type="button" class="btn btn-primary" id="#button-1">button 1</button>
+<button type="button" class="btn btn-light" id="#button-2">button-2</button>
+<button type="button" class="btn btn-success" id="#button-3">button-3</button>
+<button type="button" class="btn btn-danger" id="button-4">button-4</button>
+<div>
+	<button type="button" class="btn btn-primary btn-lg btn-block" id="button-5">button-5</button>
+</div>
+	<button type="button" class="btn btn-danger" id="button-6">button-6</button>
+<button type="button" class="btn btn-outline-primary" id="button-7">buton-7</button>
 </body>
+	<button type="button" class="btn btn-link" id="#button-8">button-8</button>
+
 
 </html>
